<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hard_blue"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/bebas_neue"
        android:letterSpacing="0.05"
        android:text="@string/kurumapp"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="110dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/Caja"
        android:layout_width="300dp"
        android:layout_height="450dp"
        app:cardBackgroundColor="@color/soft_blue"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.30"
        tools:ignore="TextSizeCheck">

        <LinearLayout
            android:id="@+id/contenidoOriginal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/nunito_bold"
                android:letterSpacing="0.04"
                android:text="@string/bienvenido"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:ems="30"
                android:fontFamily="@font/nunito_light"
                android:hint="@string/nombre_completo"
                android:inputType="text"
                android:textColorHint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:ems="30"
                android:fontFamily="@font/nunito_light"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/nunito_light"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                tools:ignore="LabelFor,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/etPasswordC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:autofillHints=""
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/nunito_light"
                android:hint="@string/confirma_la_contraseña"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                tools:ignore="LabelFor,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/nunito_light"
                android:text="@string/registrarte"
                android:textColor="@color/hard_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="60dp"
                android:backgroundTint="@color/hard_blue"
                android:fontFamily="@font/nunito_light"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>